--- a/settings.ini
+++ b/settings.ini
@@ -26,7 +26,7 @@ server.settings.mesoRate = 1
 server.settings.maxCharView = 20
 server.settings.tespia = false
 server.settings.flag = 3
-server.settings.serverMessage = 貼心提醒 : 如果發現外掛或外掛蹤跡請截圖至社團. 祝遊玩愉快~
+server.settings.serverMessage = 欢迎来到最初的冒险岛 : 如果发现外挂请截图告知. 祝游戏愉快~
 server.settings.cashRate = 1
 server.settings.ip.listen = 127.0.0.1
 server.settings.ip.gateway = 127.0.0.1
@@ -41,7 +41,7 @@ net.sf.odinms.channel.net.port13 = 7587
 net.sf.odinms.channel.net.port12 = 7586
 net.sf.odinms.channel.net.port11 = 7585
 net.sf.odinms.channel.net.port10 = 8595
-server.settings.eventMessage = #b尊重包容友善#  #b歡迎來到TMS#  #r請勿開外掛# #r抓到永久鎖# #r@幫助/@help-查看指令#
+server.settings.eventMessage = #b尊重包容友善#  #b欢迎来到最初的冒险岛#  #r请勿开外挂# #r抓到永久封# #r@帮助/@help-查看指令#
 server.settings.events = HontalePQ,HorntailBattle,cpq2,elevator,Christmas,FireDemon,Amoria,cpq,AutomatedEvent,Flight,English,English0,English1,English2,WuGongPQ,ElementThanatos,4jberserk,4jrush,Trains,Geenie,AirPlane,Boats,OrbisPQ,HenesysPQ,Romeo,Juliet,Pirate,Ellin,DollHouse,BossBalrog_NORMAL,Nibergen,PinkBeanBattle,ZakumBattle,NamelessMagicMonster,Dunas,Dunas2,ZakumPQ,LudiPQ,KerningPQ,ProtectTylus,Vergamot,CoreBlaze,GuildQuest,Aufhaven,Subway,KyrinTrainingGroundC,KyrinTrainingGroundV,ProtectPig,ScarTarBattle,s4resurrection,s4resurrection2,s4nest,s4aWorld,DLPracticeField,AutoSave,ServerMessage,BossQuestEASY,BossQuestHARD,BossQuestHELL,BossQuestMed,shaoling,Ravana,MV,BossBalrog,Ghostbaby,MagicQuest1,Francis,Relic,aran3rd,aran3rd2,aran4th,ProtectRichard,SnackBar,Mechanical,chengqiang1,chengqiang2,chengqiang3,chengqiang4,chengqiang5,VonLeonBattle
 server.settings.maxCharacters = 3
 server.settings.admin = false
