--- a/settings.ini
+++ b/settings.ini
@@ -34,7 +34,7 @@ server.settings.cashshop.port = 5555
 server.settings.cashshop.enable = true
 
 # [日志]
-server.settings.packetLog = false
+server.settings.packetLog = true
 # [循环任务开关]
 server.settings.autoCycleBroadcast = true
 server.settings.autoSave = true
