--- a/settings.ini
+++ b/settings.ini
@@ -56,7 +56,8 @@ server.settings.wflags = 0
 server.wzpath = wz
 server.settings.gmitems = true
 server.settings.serverName = 冒险岛
-server.settings.channel.count = 2
+# [频道数量]
+server.settings.channel.count = 5
 server.settings.tespia = false
 server.settings.flag = 3
 server.settings.serverMessage = 欢迎来到最初的冒险岛 : 如果发现外挂请截图告知. 祝游戏愉快~
